Fri Oct 14 23:07:48 1994  Theodore Y. Ts'o  (tytso@dcl)

	* init_ets.c (krb5_init_ets): Fix typo in spelling of KRB5_USE_ISODE.

Thu Sep 29 15:09:03 1994  Theodore Y. Ts'o  (tytso@dcl)

	* krb5_err.et (KRB5_KDCREP_SKEW, KRB5_IN_TKT_REALM_MISMATCH,
	  KRB5_SERVICE_UNKNOWN):
	  	Added two new error codes.

Wed Sep 21 18:00:25 1994  Theodore Y. Ts'o  (tytso@dcl)

	* krb5_err.et (KRB5KRB_AP_ERR_ILL_CR_TKT): Added new error code.

Sat Jul 16 05:59:53 1994  Tom Yu  (tlyu at dragons-lair)

	* krb5_err.et: missing space between comma and doublequote

Tue Jun 28 19:11:43 1994  Tom Yu  (tlyu at dragons-lair)

	* Makefile.in: doing the right thing with new error tables

	* configure.in: adding ISODE_DEFS
	* init_ets.c: folding in Harry's changes
