@@ -22,6 +22,7 @@ AC_SUBST(BOGUS)
 SubdirLibraryRule([${OBJS}])
 CopyHeader(isode_err.h,[$(EHDRDIR)])
 CopyHeader(krb5_err.h,[$(EHDRDIR)])
+CopyHeader(kv5m_err.h,[$(EHDRDIR)])
 CopyHeader(kdb5_err.h,[$(EHDRDIR)])
 CopyHeader(adm_err.h,[$(EHDRDIR)])
 CopyHeader(asn1_err.h,[$(EHDRDIR)])
