@@ -1,0 +1,63 @@
+#
+# src/lib/krb5/kv5m_err.et
+#
+# Copyright 1994 by the Massachusetts Institute of Technology.
+# All Rights Reserved.
+#
+# Export of this software from the United States of America may
+#   require a specific license from the United States Government.
+#   It is the responsibility of any person or organization contemplating
+#   export to obtain such a license before exporting.
+# 
+# WITHIN THAT CONSTRAINT, permission to use, copy, modify, and
+# distribute this software and its documentation for any purpose and
+# without fee is hereby granted, provided that the above copyright
+# notice appear in all copies and that both that copyright notice and
+# this permission notice appear in supporting documentation, and that
+# the name of M.I.T. not be used in advertising or publicity pertaining
+# to distribution of the software without specific, written prior
+# permission.  M.I.T. makes no representations about the suitability of
+# this software for any purpose.  It is provided "as is" without express
+# or implied warranty.
+# 
+#
+# The Kerberos v5 magic numbers errorcode table
+
+error_table kv5m
+
+error_code KV5M_NONE		"Kerberos V5 magic number table"
+error_code KV5M_PRINCIPAL	"Bad magic number for krb5_principal structure"
+error_code KV5M_DATA		"Bad magic number for krb5_data structure"
+error_code KV5M_KEYBLOCK	"Bad magic number for krb5_keyblock structure"
+error_code KV5M_CHECKSUM	"Bad magic number for krb5_checksum structure"
+error_code KV5M_ENCRYPT_BLOCK	"Bad magic number for krb5_encrypt_block structure"
+error_code KV5M_ENC_DATA	"Bad magic number for krb5_enc_data structure"
+error_code KV5M_CRYPTOSYSTEM_ENTRY	"Bad magic number for krb5_cryptosystem_entry structure"
+error_code KV5M_CS_TABLE_ENTRY	"Bad magic number for krb5_cs_table_entry structure"
+error_code KV5M_CHECKSUM_ENTRY	"Bad magic number for krb5_checksum_entry structure"
+
+error_code KV5M_AUTH_DATA	"Bad magic number for krb5_authdata structure"
+error_code KV5M_TRANSITED	"Bad magic number for krb5_transited structure"
+error_code KV5M_ENC_TKT_PART	"Bad magic number for krb5_enc_tkt_part structure"
+error_code KV5M_TICKET		"Bad magic number for krb5_ticket structure"
+error_code KV5M_AUTHENTICATOR	"Bad magic number for krb5_authenticator structure"
+error_code KV5M_TKT_AUTHENT	"Bad magic number for krb5_tkt_authent structure"
+error_code KV5M_CREDS		"Bad magic number for krb5_creds structure"
+error_code KV5M_LAST_REQ_ENTRY	"Bad magic number for krb5_last_req_entry structure"
+error_code KV5M_PA_DATA		"Bad magic number for krb5_pa_data structure"
+error_code KV5M_KDC_REQ		"Bad magic number for krb5_kdc_req structure"
+error_code KV5M_ENC_KDC_REP_PART "Bad magic number for krb5_enc_kdc_rep_part structure"
+error_code KV5M_KDC_REP		"Bad magic number for krb5_kdc_rep structure"
+error_code KV5M_ERROR		"Bad magic number for krb5_error structure"
+error_code KV5M_AP_REQ		"Bad magic number for krb5_ap_req structure"
+error_code KV5M_AP_REP		"Bad magic number for krb5_ap_rep structure"
+error_code KV5M_AP_REP_ENC_PART	"Bad magic number for krb5_ap_rep_enc_part structure"
+error_code KV5M_RESPONSE	"Bad magic number for krb5_response structure"
+error_code KV5M_SAFE		"Bad magic number for krb5_safe structure"
+error_code KV5M_PRIV		"Bad magic number for krb5_priv structure"
+error_code KV5M_PRIV_ENC_PART	"Bad magic number for krb5_priv_enc_part structure"
+error_code KV5M_CRED		"Bad magic number for krb5_cred structure"
+error_code KV5M_CRED_INFO	"Bad magic number for krb5_cred_info structure"
+error_code KV5M_CRED_ENC_PART	"Bad magic number for krb5_cred_enc_part structure"
+error_code KV5M_PWD_DATA	"Bad magic number for krb5_pwd_data structure"
+end
